solve error of not launching block window somethimes

--- a/app/src/main/res/layout/pattern_lock.xml
+++ b/app/src/main/res/layout/pattern_lock.xml
@@ -2,23 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
 
-    <com.takwolf.android.lock9.Lock9View
-        android:id="@+id/lock9_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        app:lock9_nodeSrc="@drawable/blue_dot"
-        app:lock9_nodeOnSrc="@drawable/green_dot"
-        app:lock9_padding="50dp"
-        app:lock9_spacing="58dp"
-        app:lock9_nodeSize="36dp"
-        app:lock9_lineColor="@color/gray_500"
-        app:enableLineDrawing="false"
-        app:lock9_autoLink="false" />
+<!--    <com.takwolf.android.lock9.Lock9View-->
+<!--        android:id="@+id/lock9_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        app:lock9_nodeSrc="@drawable/blue_dot"-->
+<!--        app:lock9_nodeOnSrc="@drawable/green_dot"-->
+<!--        app:lock9_padding="50dp"-->
+<!--        app:lock9_spacing="58dp"-->
+<!--        app:lock9_nodeSize="36dp"-->
+<!--        app:lock9_lineColor="@color/gray_500"-->
+<!--        app:enableLineDrawing="false"-->
+<!--        app:lock9_autoLink="false" />-->
+
+<!--    <com.andrognito.patternlockview.PatternLockView-->
+<!--        android:id="@+id/pattern_lock_view"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:layout_width="280dp"-->
+<!--        android:layout_height="280dp"/>-->
+
+<!--    <com.hanks.passcodeview.PasscodeView-->
+<!--        android:id="@+id/passcode_view"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:lineColor="@color/purple_500"-->
+<!--        app:numberTextColor="@color/purple_500"-->
+<!--        app:numberTextSize="20sp"-->
+<!--        app:passcodeLength="4"-->
+<!--        app:passcodeType="number" />-->
+
 
 <!--    app:lock9_lineWidth="0dp"-->
 
