--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-<!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
-<!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
-<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-<!--        <item name="colorPrimary">@color/colorPrimary</item>-->
-<!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
-<!--        <item name="colorAccent">@color/colorAccent</item>-->
-<!--    </style>-->
+    <!--    &lt;!&ndash; Base application theme. &ndash;&gt;-->
+    <!--    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+    <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+    <!--        <item name="colorPrimary">@color/colorPrimary</item>-->
+    <!--        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+    <!--        <item name="colorAccent">@color/colorAccent</item>-->
+    <!--    </style>-->
 
     <!--Custom Styles-->
 
@@ -32,12 +32,21 @@
         <item name="android:textColor">@color/text_color</item>
     </style>
 
+    <style name="Widget.Theme.ReclaimControl.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
+    </style>
+
+    <style name="Widget.Theme.ReclaimControl.ButtonBar.Fullscreen" parent="">
+        <item name="android:background">@color/black_overlay</item>
+        <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
+    </style>
+
 
     <!--    <style name="outLinedButton" parent="Widget.AppCompat.Button">-->
-<!--        <item name="android:background">@drawable/border_outlined_button</item>-->
-<!--        <item name="android:textColor">@color/colorPrimary</item>-->
-<!--        <item name="android:outlineSpotShadowColor" tools:targetApi="p">@color/colorPrimaryDark</item>-->
-<!--        <item name="android:padding">4dp</item>-->
-<!--    </style>-->
+    <!--        <item name="android:background">@drawable/border_outlined_button</item>-->
+    <!--        <item name="android:textColor">@color/colorPrimary</item>-->
+    <!--        <item name="android:outlineSpotShadowColor" tools:targetApi="p">@color/colorPrimaryDark</item>-->
+    <!--        <item name="android:padding">4dp</item>-->
+    <!--    </style>-->
 
 </resources>
